Prepare v2.25 startup hotfix